--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
+        "react-select": "^5.5.8",
+        "react-text-mask": "^5.5.0",
+        "@types/react-text-mask": "^5.4.11",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11",
-        "react-select": "^5.5.8"
+        "react-quill": "^2.0.0"
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.3",
