--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     },
     "dependencies": {
         "@emotion/react": "^11.11.4",
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@mantine/core": "^5.10.5",
         "@mantine/hooks": "^5.10.5",
         "@popperjs/core": "^2.11.6",
@@ -21,20 +24,20 @@
         "@types/node": "^16.11.64",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "@types/react-text-mask": "^5.4.11",
         "mantine-datatable": "^1.7.17",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-popper": "^2.3.0",
+        "react-quill": "^2.0.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-select": "^5.5.8",
         "react-text-mask": "^5.5.0",
-        "@types/react-text-mask": "^5.4.11",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4",
-        "yup": "^0.32.11",
-        "react-quill": "^2.0.0"
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.3",
